Add SLAP to DeleteMeetingCommandParser